--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- page Navigation -->
     <nav class="navbar custom-navbar navbar-expand-md navbar-light fixed-top" data-spy="affix" data-offset-top="10">
         <div class="container">
-            <a class="navbar-brand" href="#" style=" transform: scale(4.5); ">
+            <a class="navbar-brand" href="#" style="transform: scale(400%); margin-left: 19%;">
                 <img src="assets/imgs/logo.svg" alt="">
             </a>
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -92,7 +92,7 @@
                             <small class="text-primary font-weight-bold">03</small>
                             <h5 class="card-title mt-3">
                                 Integrations<h5>
-                                                <p class="mb-0">Integrations are essential for businesses to connect different software systems and improve collaboration and data flow across departments. At our IT company, we provide integration solutions that allow our clients to streamline their operations, reduce manual efforts, and maximize their technology investments. Our customized integration solutions seamlessly connect different systems to enable real-time data exchange, automate workflows, and enhance productivity, allowing our clients to focus on their core business activities and achieve their goals.</p>
+                                    <p class="mb-0">Integrations are essential for businesses to connect different software systems and improve collaboration and data flow across departments. At our IT company, we provide integration solutions that allow our clients to streamline their operations, reduce manual efforts, and maximize their technology investments. Our customized integration solutions seamlessly connect different systems to enable real-time data exchange, automate workflows, and enhance productivity, allowing our clients to focus on their core business activities and achieve their goals.</p>
                         </div>
                     </div>
                 </div>
@@ -384,7 +384,7 @@
                                     <small class="text-muted mb-0">Solution Architect</small>
                                 </div>
                             </div>
-                            <p class="mb-0">With a proven track record, our solution architects design and implement custom technology solutions that drive business growth and meet our clients' needs.</p>
+                            <p class="mb-0">With a proven track record, our solution architect design and implement custom technology solutions that drive business growth and meet our clients' needs.</p>
                         </div>
                     </div>
                 </div>
@@ -406,7 +406,6 @@
         </div>
     </section>
     <!--End of Testmonial Section -->
-
     <!-- Contact Section -->
     <section id="contact" class="section has-img-bg pb-0">
         <div class="container">
@@ -414,7 +413,9 @@
                 <div class="col-md-5 my-3">
                     <h4 class="mb-4" style="
     margin-top: -52px;
-">CodeDemeter Innovative Solutions (OPC) Pvt. Ltd.</h4>
+">
+                        CodeDemeter Innovative Solutions (OPC) Pvt. Ltd.
+                    </h4>
                     <!--<h6 class="mb-0">Phone</h6>-->
                     <!--<p class="mb-4">+91 721 722 6557</p>-->
 
