--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Sunaina landing page.">
-    <meta name="author" content="Devcrud">
+    <meta name="description" content="Start your Journey with CodeDemeter.">
+    <meta name="author" content="CodeDemeter">
     <title>CodeDemeter || Inv Sol</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
