--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                     <h4 class="mb-4" style="
     margin-top: -52px;
 ">
-                        CodeDemeter Innovative Solutions (OPC) Pvt. Ltd.
+                        Codedemeter Innovative Solutions (OPC) Pvt. Ltd.
                     </h4>
                     <!--<h6 class="mb-0">Phone</h6>-->
                     <!--<p class="mb-4">+91 721 722 6557</p>-->
