--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     </section>-->
     <!-- End of Blog Section -->
     <!-- Testmonial Section -->
-    <section class="section" id="testmonial">
+    <!--<section class="section" id="testmonial">
         <div class="container">
             <h6 class="section-title text-center mb-0">Team</h6>
             <h6 class="section-subtitle mb-5 text-center">Meet our team</h6>
@@ -404,7 +404,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <!--End of Testmonial Section -->
     <!-- Contact Section -->
     <section id="contact" class="section has-img-bg pb-0">
