--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
         </div>
     </section>-->
     <!-- End of Blog Section -->
-    <!-- Testmonial Section -->
-    <!--<section class="section" id="testmonial">
+    <!-- Testmonial Section
+    <section class="section" id="testmonial">
         <div class="container">
             <h6 class="section-title text-center mb-0">Team</h6>
             <h6 class="section-subtitle mb-5 text-center">Meet our team</h6>
@@ -404,8 +404,8 @@
                 </div>
             </div>
         </div>
-    </section>-->
-    <!--End of Testmonial Section -->
+    </section>
+    End of Testmonial Section -->
     <!-- Contact Section -->
     <section id="contact" class="section has-img-bg pb-0">
         <div class="container">
