--- a/index.html
+++ b/index.html
@@ -354,58 +354,8 @@
         </div>
     </section>-->
     <!-- End of Blog Section -->
-    <!-- Testmonial Section
-    <section class="section" id="testmonial">
-        <div class="container">
-            <h6 class="section-title text-center mb-0">Team</h6>
-            <h6 class="section-subtitle mb-5 text-center">Meet our team</h6>
-            <div class="row">
-                <div class="col-md-4 my-3 my-md-0">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="media align-items-center mb-3">
-                                <!--<img class="mr-3" src="assets/imgs/avatar.jpg" alt="">-->
-                                <div class="media-body">
-                                    <h6 class="mt-1 mb-0">Anju</h6>
-                                    <small class="text-muted mb-0">Company Director</small>
-                                </div>
-                            </div>
-                            <p class="mb-0">Anju, CodeDemeter's founder/ director, drives the organization's strategy, technical direction, and operational oversight with expertise in technology and business.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 my-3 my-md-0">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="media align-items-center mb-3">
-                                <!--<img class="mr-3" src="assets/imgs/avatar-1.jpg" alt="">-->
-                                <div class="media-body">
-                                    <h6 class="mt-1 mb-0">Ankit</h6>
-                                    <small class="text-muted mb-0">Solution Architect</small>
-                                </div>
-                            </div>
-                            <p class="mb-0">With a proven track record, our solution architect design and implement custom technology solutions that drive business growth and meet our clients' needs.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 my-3 my-md-0">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="media align-items-center mb-3">
-                                <!--<img class="mr-3" src="assets/imgs/avatar-2.jpg" alt="">-->
-                                <div class="media-body">
-                                    <h6 class="mt-1 mb-0">Yogi</h6>
-                                    <small class="text-muted mb-0">Business Development</small>
-                                </div>
-                            </div>
-                            <p class="mb-0">Our business development experts drive growth by identifying and pursuing opportunities that align with our strategic goals.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    End of Testmonial Section -->
+    <!-- Testmonial Section -->
+    <!-- End of Testmonial Section -->
     <!-- Contact Section -->
     <section id="contact" class="section has-img-bg pb-0">
         <div class="container">
